--- a/exercicios/06_exercicio_bootstrap/pag_anim.html
+++ b/exercicios/06_exercicio_bootstrap/pag_anim.html
@@ -48,16 +48,16 @@
     <!--inicio headedr-->
     <header>
         <div class="container padbase">
-            <h1 class="display-2 text-center text-light font-weight-bold glow">TOP 3 ANIMES</h1>
+            <h1 class="display-2 text-center text-light font-weight-bold glow padcard">TOP 3 ANIMES</h1>
         </div>
         <div class="container">
             <!-- top 3 -->
             <div class="row">
                 <!-- item 1 -->
                 <div class="col-lg-4 col-12">
-                    <div class="card bg-transparent">
+                    <div class="card bg-transparent padcard">
                         <a data-toggle="modal" data-target="#contmod1">
-                            <img src="public/imgs/games.png" class="rounded-circle img-fluid max-width:33% border"
+                            <img src="public/imgs/anime.jpg" class="rounded-circle img-fluid max-width:33%"
                                 style="padding: 5%;">
                         </a>
                         <!-- modal -->
@@ -67,7 +67,7 @@
 
                                     <!-- título -->
                                     <div class="modal-header">
-                                        <h4>TITULO</h4>
+                                        <h4>Boku no hero academia</h4>
                                         <button class="close" data-dismiss="modal" arial-label="Fechar">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -76,11 +76,16 @@
                                     <!-- conteudo -->
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="col-6">
-                                                TEXTO 1
+                                            <div class="col-12">
+                                                <p class="text-center font-weight-bold display-3">My hero academia</p>
+                                                <img src="public/imgs/anime.jpg" class="rounded img-fluid img-lg">
                                             </div>
-                                            <div class="col-6">
-                                                texto 2
+                                            <div class="col-12" style="padding-top: .8rem;">
+                                                <a class="btn btn-block btn-dark"
+                                                    style="height: 4rem; padding-top:1rem;"
+                                                    href="https://www.crunchyroll.com/pt-br/my-hero-academia">
+                                                    <i class="icon ion-md-play text-center"></i>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -97,9 +102,9 @@
                 </div>
                 <!-- item 2 -->
                 <div class="col-lg-4 col-12">
-                    <div class="card bg-transparent">
+                    <div class="card bg-transparent padcard">
                         <a data-toggle="modal" data-target="#contmod2">
-                            <img src="public/imgs/games.png" class="rounded-circle img-fluid max-width:33% border"
+                            <img src="public/imgs/demonslayer.jpg" class="rounded-circle img-fluid max-width:33%"
                                 style="padding: 5%;">
                         </a>
                         <!-- modal -->
@@ -107,9 +112,9 @@
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
 
-                                    <!-- titulo -->
+                                    <!-- título -->
                                     <div class="modal-header">
-                                        <h4>modal teste</h4>
+                                        <h4>Demon Slayer</h4>
                                         <button class="close" data-dismiss="modal" arial-label="Fechar">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -118,11 +123,16 @@
                                     <!-- conteudo -->
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="col-6">
-                                                TEXTO 1
+                                            <div class="col-12">
+                                                <p class="text-center font-weight-bold display-3">Demon Slayer</p>
+                                                <img src="public/imgs/demonslayer.jpg" class="rounded img-fluid img-lg">
                                             </div>
-                                            <div class="col-6">
-                                                texto 2
+                                            <div class="col-12" style="padding-top: .8rem;">
+                                                <a class="btn btn-block btn-dark"
+                                                    style="height: 4rem; padding-top:1rem;"
+                                                    href="https://www.crunchyroll.com/pt-br/demon-slayer-kimetsu-no-yaiba">
+                                                    <i class="icon ion-md-play text-center"></i>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -139,9 +149,9 @@
                 </div>
                 <!-- item 3 -->
                 <div class="col-lg-4 col-12">
-                    <div class="card bg-transparent">
+                    <div class="card bg-transparent padcard">
                         <a data-toggle="modal" data-target="#contmod3">
-                            <img src="public/imgs/games.png" class="rounded-circle img-fluid max-width:33% border"
+                            <img src="public/imgs/naruto.jpg" class="rounded-circle img-fluid max-width:33%"
                                 style="padding: 5%;">
                         </a>
                         <!-- modal -->
@@ -149,9 +159,9 @@
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
 
-                                    <!-- titulo -->
+                                    <!-- título -->
                                     <div class="modal-header">
-                                        <h4>modal teste</h4>
+                                        <h4>Naruto shippuden</h4>
                                         <button class="close" data-dismiss="modal" arial-label="Fechar">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -160,11 +170,16 @@
                                     <!-- conteudo -->
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="col-6">
-                                                <img>
+                                            <div class="col-12">
+                                                <p class="text-center font-weight-bold display-3">Naruto shippuden</p>
+                                                <img src="public/imgs/naruto.jpg" class="rounded img-fluid img-lg">
                                             </div>
-                                            <div class="col-6">
-                                                <p></p>
+                                            <div class="col-12" style="padding-top: .8rem;">
+                                                <a class="btn btn-block btn-dark"
+                                                    style="height: 4rem; padding-top:1rem;"
+                                                    href="https://www.crunchyroll.com/pt-br/naruto-shippuden">
+                                                    <i class="icon ion-md-play text-center"></i>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -187,7 +202,7 @@
     <!-- inicio accordion -->
     <div class="container-fluid teste">
         <div class="pdbase">
-            <h2 class="display-4 text-center font-weight-bold text-light">Lista de Jogos Recomendados</h2>
+            <h2 class="display-4 text-center font-weight-bold text-light padbase">Lista de Animes Recomendados</h2>
         </div>
         <div class="accordion" id="gameacc">
 
@@ -195,20 +210,23 @@
             <div class="card">
                 <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                        <button class="btn btn-dark btn-block" type="button" data-toggle="collapse" data-target="#collapseOne"
                             aria-expanded="false" aria-controls="collapseOne">
-                            GAME 1
+                            Anime 1
                         </button>
                     </h5>
                 </div>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#gameacc">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-3">
-                                <img>
+                            <div class="col-4">
+                                <p class="text-center font-weight-bold font-size-xl">Assassination Classroom</p>
                             </div>
-                            <div class="col-9">
-                                <p></p>
+                            <div class="col-8">
+                                <a class="btn btn-block btn-dark"
+                                    href="https://www.crunchyroll.com/pt-br/assassination-classroom">
+                                    <i class="icon ion-md-play"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -219,20 +237,23 @@
             <div class="card">
                 <div class="card-header" id="headingTwo">
                     <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                        <button class="btn btn-dark btn-block collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            GAME 2
+                            Anime 2
                         </button>
                     </h5>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#gameacc">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-3">
-                                <img>
+                            <div class="col-4">
+                                <p class="text-center font-weight-bold font-size-xl">Mob Psycho</p>
                             </div>
-                            <div class="col-9">
-                                <p></p>
+                            <div class="col-8">
+                                <a class="btn btn-block btn-dark"
+                                    href="https://www.crunchyroll.com/pt-br/mob-psycho-100">
+                                    <i class="icon ion-md-play"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -243,20 +264,22 @@
             <div class="card">
                 <div class="card-header" id="headingThree">
                     <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                        <button class="btn btn-dark btn-block collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            GAME 3
+                            Anime 3
                         </button>
                     </h5>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#gameacc">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-3">
-                                <img>
+                            <div class="col-4">
+                                <p class="text-center font-weight-bold font-size-xl">Death Note</p>
                             </div>
-                            <div class="col-9">
-                                <p></p>
+                            <div class="col-8">
+                                <a class="btn btn-block btn-dark" href="https://www.crunchyroll.com/pt-br/death-note">
+                                    <i class="icon ion-md-play"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
