--- a/exercicios/06_exercicio_bootstrap/pag_game.html
+++ b/exercicios/06_exercicio_bootstrap/pag_game.html
@@ -48,7 +48,7 @@
     <!--inicio headedr-->
     <header>
         <div class="container padbase">
-            <h1 class="display-2 text-center text-light font-weight-bold glow">TOP 3 JOGOS</h1>
+            <h1 class="display-2 text-center text-light font-weight-bold glow padcard">TOP 3 JOGOS</h1>
         </div>
         <div class="container">
             <!-- top 3 -->
