youtube icon teste

--- a/exercicios/04_form/formulario.html
+++ b/exercicios/04_form/formulario.html
@@ -13,7 +13,7 @@
         <h1>Cadastre seu currículo</h1>
     </header>
 
-    <form name="cadastro" autocomplete="off" action="salvarDados" method="post">
+    <form name="cadastro" autocomplete="off" action="salvarDados.txt" method="post">
         <!--1.Dados Pessoais-->
         <table>
             <h3>1. Dados Pessoais</h3>
