--- a/exercicios/06_exercicio_bootstrap/pag_anim.html
+++ b/exercicios/06_exercicio_bootstrap/pag_anim.html
@@ -10,6 +10,8 @@
 
     <script src="public/js/jquery.js"></script>
     <script src="public/js/bootstrap.bundle.min.js"></script>
+    <!-- icons -->
+    <script src="https://kit.fontawesome.com/cd9a49d4b2.js" crossorigin="anonymous"></script>
     <!-- ion icons -->
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
@@ -82,9 +84,8 @@
                                             </div>
                                             <div class="col-12" style="padding-top: .8rem;">
                                                 <a class="btn btn-block btn-dark"
-                                                    style="height: 4rem; padding-top:1rem;"
                                                     href="https://www.crunchyroll.com/pt-br/my-hero-academia">
-                                                    <i class="icon ion-md-play text-center"></i>
+                                                    <i class="fab fa-youtube fa-3x"></i>
                                                 </a>
                                             </div>
                                         </div>
@@ -210,8 +211,8 @@
             <div class="card">
                 <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
-                        <button class="btn btn-dark btn-block" type="button" data-toggle="collapse" data-target="#collapseOne"
-                            aria-expanded="false" aria-controls="collapseOne">
+                        <button class="btn btn-dark btn-block" type="button" data-toggle="collapse"
+                            data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                             Anime 1
                         </button>
                     </h5>
