--- a/exercicios/01_exercicio/pagina1.html
+++ b/exercicios/01_exercicio/pagina1.html
@@ -79,6 +79,17 @@
     <img src="imagens/img1.jpg" width="128" height="128">
     <img src="imagens/img1.jpg" width="256" height="128">
 
+<table>   
+        <tr>            
+            <td rowspan="2">.</td>            
+            <td>.</td>            
+            <td>.</td>    
+        </tr>    
+        <tr>             
+        <td>.</td>            
+        <td>.</td>   
+    </tr>
+</table>
 
 </body>
 
