--- a/exercicios/07_exercicio_JSON/quiz.html
+++ b/exercicios/07_exercicio_JSON/quiz.html
@@ -20,52 +20,45 @@
 </head>
 
 <body>
-    <!-- inicio navbar 
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top navbar-default">
-        <div class="container-fluid">
-             logo -->
-    <!-- <a class="navbar-brand" href="#" target="blank">
-                <img src="public/imgs/logo.png" height="70" width="160">
-            </a>
-        </div>
-    </nav>
-     fim do navbar -->
-    <!-- Pontuação -->
+    <header>
+        <script>
+            window.onload = function() {
+                nextQuestion();
+            };
+        </script>
+    </header>
 
     <!-- Imagem da pergunta -->
 
     <div class="row">
+        <!-- Pergunta -->
+        <div class="col-12 text-center font-weight-bold" id="quesTxt" style="padding-top: 0.8rem;">Você sabe qual 'nome do quiz (ex:jogo)' é esse ? Pergunta 1/10"</div>
+        <div class="col-12 text-center font-weight-bold" id="pontuacao" style="padding-top: 0.8rem;"> Pontuacao 0 / 10</div>
         <!-- Imagem principal-->
-        <div class="col-12 text-center" id="displayText">
-
-        </div>
+        <div class="col-12 text-center" id="displayText" style="padding: 3rem 0;"></div>
     </div>
 
     <div class="row">
         <!-- respostas-->
         <!-- resposta 01-->
-        <div id="divres1" class="col-lg-6 col-12" style="padding: 3rem 3rem;">
-            <a id="res1" class="btn btn-dark btn-block text-light" onclick="randomizar()">TESTE</a>
+        <div id="divres1" class="col-lg-6 col-12" style="padding: 1.2rem 3rem;">
+            <a id="res1" class="btn btn-dark btn-block text-light" onclick="qualApertei('res1')"></a>
         </div>
         <!-- resposta 02-->
-        <div class="col-lg-6 col-12" style="padding: 3rem 3rem;">
-            <a id="res2" class="btn btn-dark btn-block text-light" onclick="randomizar()">TESTE</a>
+        <div class="col-lg-6 col-12" style="padding: 1.2rem 3rem;">
+            <a id="res2" class="btn btn-dark btn-block text-light" onclick="qualApertei('res2')"></a>
         </div>
         <!-- resposta 02-->
-        <div class="col-lg-6 col-12" style="padding: 3rem 3rem;">
-            <a id="res3" class="btn btn-dark btn-block text-light" onclick="randomizar()">TESTE</a>
+        <div class="col-lg-6 col-12" style="padding: 1.2rem 3rem;">
+            <a id="res3" class="btn btn-dark btn-block text-light" onclick="qualApertei('res3')"></a>
         </div>
         <!-- resposta 04-->
-        <div class="col-lg-6 col-12" style="padding: 3rem 3rem;">
-            <a id="res4" class="btn btn-dark btn-block text-light" onclick="randomizar()">TESTE</a>
+        <div class="col-lg-6 col-12" style="padding: 1.2rem 3rem;">
+            <a id="res4" class="btn btn-dark btn-block text-light" onclick="qualApertei('res4')"></a>
         </div>
     </div>
 
 </body>
-<script>
-    window.onload = function() {
-        randomizar();
-    };
-</script>
+
 
 </html>
